# thuki

./: .env  .env.example  .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  eslint.config.mjs  fix-always-upward.cjs  fix-effect.cjs  fix-effect.js  fix-layout-both.cjs  fix-layout.cjs  fix-lint.cjs  fix-lint2.cjs  fix-react-style.cjs  fix-tailwind.cjs  fix-test-2.cjs  fix-test.cjs  fix-ts.cjs  index.html  package.json  release-please-config.json  rust-toolchain.toml  skills-lock.json  vite.config.ts  vitest.config.ts
spikes/ddg-spike/: .gitignore  Cargo.toml  README.md  queries.txt  run-batch.sh
spikes/ddg-spike/src/: main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/prompts/: search_chunk_judge.txt  search_judge.txt  search_plan.txt  search_router.txt  search_router_merged.txt  search_snippet_judge.txt  search_synthesis.txt  system_prompt.txt
src-tauri/src/: activator.rs  cg_displays.rs  commands.rs  context.rs  database.rs  export.rs  history.rs  images.rs  keychain.rs  lib.rs  main.rs  models.rs  ocr.rs  onboarding.rs  openai.rs  permissions.rs  replace.rs  screenshot.rs  settings_commands.rs  startup_guard.rs  subscribe.rs  warmup.rs
src-tauri/src/config/: defaults.rs  error.rs  loader.rs  migrate.rs  mod.rs  schema.rs  tests.rs  writer.rs
src-tauri/tests/: live_answer_capture.rs  live_answer_quality_eval.rs  live_cache_reuse_repro.rs  live_classifier_eval.rs  live_language_parity_eval.rs  live_search_smoke.rs  search_pipeline_e2e.rs
(+430 files in other folders)
