[package]
name = "ddg-spike"
version = "0.1.0"
edition = "2021"
description = "Throwaway T1 spike: validates keyless DuckDuckGo HTML/Lite endpoints against real daily queries (search-revamp design, The Assignment)."
publish = false

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "gzip"] }
scraper = "0.20"
serde_json = "1"
url = "2"
